--- a/src/client/vandaid/content/css/style.css
+++ b/src/client/vandaid/content/css/style.css
@@ -52,7 +52,7 @@ a:hover {
 va-canvas {
     display: block;
     position: relative;
-    overflow: auto;
+    /*overflow: auto;*/
     /*-webkit-overflow-scrolling: touch;*/
 
     background-color: inherit;
